--- a/login.html
+++ b/login.html
@@ -634,7 +634,7 @@ var loginCheck = function(){
 			var go = Array(135).fill(false);
 			Ref.set({ // in database
 				displayName: name,
-				photo : purl,
+				photo : photoUrl,
 				like: "none",
 				went: go
 			});
