--- a/info.html
+++ b/info.html
@@ -11,31 +11,32 @@
     <title>手信坊創意和菓子文化館</title>
 
     <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/carousel/carousel.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="https://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>
+    <link rel='stylesheet prefetch' href='http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/css/bootstrap.css'>
   <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css'>
     <!--box-->
-     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/hot-sneaks/jquery-ui.css" rel="stylesheet">
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
      <!-- end-->
       <link rel="stylesheet" href="css/block_style.css">
+      <link href="css/top.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="https://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,15 +44,18 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	 <script type='text/javascript' 
-            src='https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script> 
+            src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.1.js'></script> 
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style>
-        body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}		   
+        body,input { padding-top: 100px;font-size: 9pt; font-family:Microsoft JhengHei;}	
+        tbody {}	   
     </style>
   </head>
 
   <body>
+    <a href="javascript:" id="top"><i class="icon-chevron-up"></i></a>
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<div class="navbar-wrapper">
       <div class="container">
         <nav class="navbar navbar-inverse navbar-static-top">
@@ -113,16 +117,39 @@
                         </tr>
                     </table>
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享</button>
+              <div class="btn-group" role="group" id="add_a">
+                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#share" aria-expanded="true" aria-controls="share"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>分享</button>
               </div>
               <div class="btn-group" role="group" id="add_a">
-                  <button type="button" class="btn btn-default" id="create_article"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增評論</button>
+                  <button type="button" class="btn btn-block panel-heading accordion-toggle" data-toggle="collapse" data-target="#add_article" aria-expanded="true" aria-controls="add_article"><span class="glyphicon glyphicon-plus"></span>新增評論</button>
               </div>
             </div>
-            <div class="card-container">
+                <div class="panel-body accordion-body collapse"  id="share">
+                    <ul>    
+                        <li>分享至...</li>
+                        <button class="btn btn-block"><span class="glyphicon glyphicon-fb"></span></button>
+                    </ul>
+                </div>
+            </div>
+            <div class="panel-body accordion-body collapse" id="add_article">
+                <ul>    
+                    <li>標題</li>
+                    <input type="text" id="title">
+                    <li>
+                        <img id="ph" class="hide" uid="0" width="300px" height="250px">
+		                <progress value="0" max="100" id="uploader" > 0% </progress>
+		                <input class="btn btn-lg btn-primary btn-block" type="file" value="upload" >
+                    </li>
+                    <li>內容</li>
+                    <textarea cols="100" rows="10" id="words" val=""></textarea>
+                </ul>
+                <button type="button" id="cancel">重寫</button>
+                <button type="button" id="submit" onclick="reload">送出</button>
+                </div>
+            </div>
+            <div class="card-container" id="cards">
                 <div class="card">
-                    <img src="images/t1.jpg" class="card-image">
+                    <img src="images/info/m1.jpg" class="card-image">
                     <div class="card-info">
                         <div class="card-title">Title</div>
                         <div class="card-detail">
@@ -130,7 +157,7 @@
                     </div>
                     <div class="card-social">
                         <ul>
-                            <li><i class="fa fa-comment-o" aria-hidden="true"></i>
+                            <li><a href="article.html" target="_blank"><i class="fa fa-comment-o" aria-hidden="true"></i></a>
                             </li>
                             <li><i class="fa fa-heart-o" aria-hidden="true"></i>
                             </li>
@@ -138,71 +165,23 @@
                     </div>
                 </div>
             </div>
+            <footer class="footer">
+                <p>&copy; 2016 Company, Inc.</p>
+            </footer>
         </div>
-    </div>
-    <footer class="footer">
-        <p>&copy; 2016 Company, Inc.</p>
-    </footer>
-    </div> <!-- /container -->
-    <!--<div class="container">-->        
-    <!--<div id="article_box">
-        <ul>
-            <li>標題<input type="text" id="title"></li>
-            <li>
-                <span class="btn btn-default btn-file btn-lg btn-block">
-                    Browse <input type="file" id="file">
-                </span>
-            </li>
-            <li>內容</li>
-            <textarea cols="25" rows="5" id="words" val=""></textarea>
-        </ul>
-      </div>
-      <div id="msgbox1" title="訊息">
-    </div> 
-        <script type="text/javascript">
-            $(document).ready(function(){
-                $("#create_article").button();
-                $('#create_article').click(function(){
-                    $('#article_box').dialog('open');
-	            });
-                var opt={autoOpen: false,
-                    buttons: {"確定": function() {$(this).dialog("close");}}
-                };
-                $("#msgbox1").dialog(opt);
-                var do_ok=function() {
-                    var f=$("#title").val(); //取得資料
-                    var c=$("#words").val(); //取得資料
-                    $("#msgbox1").html(f+ "<br>" + c);
-                    $("#msgbox1").dialog("open");
-                    $(this).dialog("close");
-                    }
-                var opt={autoOpen: false,
-                    title: "新增討論",
-                    buttons: [{
-                        text: "送出",
-                        id: "postWrite",
-                        click:do_ok
-                    },
-                    {
-                        text: "取消",
-                        id: "cancel",
-                        click:function() {$(this).dialog("close");}
-                    }]
-                };
-                $("#article_box").dialog(opt);
-            });
-        </script> -->
-    <!--  </div>-->
+ <!-- /container -->
 	<!-- Bootstrap core JavaScript
     ================================================== -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/top.js"></script>
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js'></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
     <script>
        $(function(){
         $('.coverflow').css('max-width',$('.coverflow img').width());
