--- a/personcolor.html
+++ b/personcolor.html
@@ -189,7 +189,8 @@
 	var taiwan =['TW-KEE','TW-TPE','TW-TPQ','TW-TAO','TW-HSZ','TW-MIA','TW-TXQ','TW-CHA','TW-YUN','TW-NAN','TW-CYQ','TW-TNQ','TW-KHQ','TW-PIF','TW-TTT','TW-HUA','TW-ILA','TW-PEN','TW-1676511'];
 	//database 的縣市順序
 	var num=[7,10,4,15,12,0,18,5,9,17,13,6,11,1,14,3,2,16,8];
-	var bluecolor = ['e6ecff','b3c6ff','809fff','4d79ff','1a53ff','0039e6','002db3','002080','00134d','00061a'];
+	//綠色由淺到深十種等級	
+	var bluecolor = ['d5f6e3','abedc8','82e3ac','58da90','2dcc71','29bc69','209252','1c7d46','12542f','092a17'];
 	
 	
 		var map;
