把北中南東的progress版面用出來(還沒有js)

--- a/personcolor.html
+++ b/personcolor.html
@@ -9,6 +9,11 @@
     <meta name="author" content="">
 
     <title>個人頁面</title>
+    <!--成就的北中南東progress-->
+    <link rel="stylesheet" href="css/test.css" type="text/css">
+    <script src="js/test.js" type="text/javascript"></script>
+	<!--成就的北中南東progress-->
+
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link rel="stylesheet" href="css/ammap.css" type="text/css">
 	<script src="js/ammap.js" type="text/javascript"></script>
@@ -147,6 +152,30 @@
 	</div>
   </div>
 </div>
+
+	<div class="wrap">
+		      
+        <div class="progress-radial progress-40">
+          <div class="overlay">40%</div>
+          <div class="overlay1">北</div>
+        </div>
+		
+        <div class="progress-radial progress-50">
+          <div class="overlay">50%</div>
+          <div class="overlay1">中</div>
+        </div>
+
+        <div class="progress-radial progress-75">
+          <div class="overlay">75%</div>
+          <div class="overlay1">南</div>
+        </div>
+
+        <div class="progress-radial progress-90">
+          <div class="overlay">90%</div>
+          <div class="overlay1">東</div>
+        </div>
+      
+    </div>
 
 	<!-- Bootstrap core JavaScript
     ================================================== -->
